--- a/src/assets/css/nucleo-icons.css
+++ b/src/assets/css/nucleo-icons.css
@@ -32,7 +32,7 @@ Created using IcoMoon - icomoon.io
 .font-icon-detail {
   text-align: center;
   padding: 45px 0 30px;
-  border: 3px solid #2a3959;
+  border: 3px solid #4472c4;
   border-radius: 35px;
   margin: 15px 0;
   min-height: 168px;
