--- a/src/assets/scss/black-dashboard-react/custom/_checkboxes-radio.scss
+++ b/src/assets/scss/black-dashboard-react/custom/_checkboxes-radio.scss
@@ -47,7 +47,7 @@
 .form-check input[type="checkbox"]:checked + .form-check-sign::before,
 .form-check input[type="checkbox"]:checked + .form-check-sign::before{
   border: none;
-  background-color: $primary;
+  background-color: #66bb6a;
 }
 
  .form-check .form-check-sign::after{
