--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -26,6 +26,13 @@
   white-space: nowrap;
 }
 
+.modal.data-extraction {
+  left: 490px !important;
+  /* top: 230px !important; */
+
+}
+
+
 @media screen and (min-width: 320px) and (max-width: 768px) {
 
   .metric_button {
@@ -36,11 +43,17 @@
     margin-left: 130% !important;
   }
 
+  
+
   .top-left img {
-    width: 80px !important;
+    width: 60px !important;
     height: auto !important;
     margin-bottom: -44% !important;
     
+  }
+
+  .modal.data-extraction {
+    left: 0px !important;
   }
 
 }
@@ -56,10 +69,14 @@
   }
 
   .top-left img {
-    width: 80px !important;
+    width: 60px !important;
     height: auto !important;
-    margin-bottom: 14% !important;
+    margin-bottom: -10% !important;
     
+  }
+
+  .modal.data-extraction {
+    left: 0px !important;
   }
 
 }
@@ -79,7 +96,7 @@
   .top-left img {
     width: 70px !important;
     height: auto !important;
-    margin-bottom: 12px !important;
+    margin-bottom: -8px !important;
   }
 
   .topbar-table.table > tbody > tr > td {
